k8s/authelia/supporting/lldap.yaml
apiVersion: v1
kind: Service
metadata:
  name: lldap
  namespace: authelia
  labels:
    app: lldap
spec:
  ports:
    - port: 17170
      targetPort: 17170
      name: http
    - port: 3890
      targetPort: 3890
      name: ldap
  selector:
    app: lldap
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lldap
  namespace: authelia
  labels:
    app: lldap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lldap
  template:
    metadata:
      labels:
        app: lldap
    spec:
      containers:
        - name: lldap
          image: lldap/lldap:2025-11-20
          ports:
            - containerPort: 17170
              name: http
            - containerPort: 3890
              name: ldap
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: lldap-data
