k8s/authelia/supporting/lldap-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lldap-ingressroute
  namespace: authelia
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`lldap.home.coredev.uk`)
      kind: Rule
      services:
        - name: authelia-lldap
          port: 17170
  tls:
    secretName: lldap-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lldap-redirect
  namespace: authelia
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`lldap.home.coredev.uk`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
          namespace: traefik
      services:
        - name: authelia-lldap
          port: 17170
